tests/snapshots/parser_snapshots__expr_separators_tokens_diagnostics.snap
---
source: tests/parser_snapshots.rs
expression: "format!(\"{:#?}\", output.diagnostics)"
---
[
    ParseDiagnostic {
        message: "unexpected operator at expression start",
        start: 1,
        end: 2,
    },
    ParseDiagnostic {
        message: "expected ')'",
        start: 6,
        end: 7,
    },
    ParseDiagnostic {
        message: "unexpected operator at expression start",
        start: 8,
        end: 9,
    },
]
