tests/snapshots/parser_snapshots__user_operator_tokens_cst.snap
---
source: tests/parser_snapshots.rs
expression: tree
---
ROOT@0..10
  IDENT@0..1 "x"
  WHITESPACE@1..2 " "
  USER_OP@2..7 "%foo%"
  WHITESPACE@7..8 " "
  IDENT@8..9 "y"
  NEWLINE@9..10 "\n"
